kubernetes_manifests/01_namespace.yml
# Create a namespace and set resource quotas and limit ranges

kind: Namespace
apiVersion: v1
metadata:
  name: sunnymor
