kubernetes_manifests/08_python_redis_to_postgres_sync_worker_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-to-postgres-worker
  namespace: sunnymor
  labels:
    app: redis-to-postgres-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-to-postgres-worker
  template:
    metadata:
      labels:
        app: redis-to-postgres-worker
    spec: 
      tolerations:
        - key: tier
          operator: Equal
          value: database
          effect: NoSchedule # tolerate the taint on the worker node
        - key: tier
          operator: Equal
          value: database
          effect: NoExecute # tolerate the taint on the worker node
      containers:
        - name: redis-to-postgres-worker
          image: ghcr.io/kul-samples/sunnymor-sync-worker-app:latest
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
