kubernetes_manifests/07_python_pick_winner_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pick-winner
  namespace: sunnymor
  labels:
    app: pick-winner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pick-winner
  template:
    metadata:
      labels:
        app: pick-winner
    spec: 
      imagePullSecrets:
        - name: ghcr
      tolerations:
        - key: tier
          operator: Equal
          value: database
          effect: NoSchedule # tolerate the taint on the worker node
        - key: tier
          operator: Equal
          value: database
          effect: NoExecute # tolerate the taint on the worker node
      containers:
        - name: pick-winner
          image: ghcr.io/kul-samples/sunnymor-pick-winner-app:latest
          ports:
            - containerPort: 5000
              name: pick-winner
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
---

apiVersion: v1
kind: Service
metadata:
  name: pick-winner
  namespace: sunnymor
  labels:
    app: pick-winner
spec:
  type: ClusterIP
  ports:
    - name: pick-winner
      port: 80
      targetPort: pick-winner
  selector:
    app: pick-winner
